--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -4421,25 +4421,32 @@ button.close {
   position: relative;
   width: auto;
   margin: 0.5rem;
-  pointer-events: none; }
+}
+
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
+  -o-transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  -webkit-transform: translate(0, -25%);
+  -ms-transform: translate(0, -25%);
+  transform: translate(0, -25%);
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
   .modal.fade .modal-dialog {
-    -webkit-transition: -webkit-transform 0.3s ease-out;
-    transition: -webkit-transform 0.3s ease-out;
-    -o-transition: transform 0.3s ease-out;
-    transition: transform 0.3s ease-out;
-    transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-    -webkit-transform: translate(0, -25%);
-    -ms-transform: translate(0, -25%);
-    transform: translate(0, -25%); }
-    @media screen and (prefers-reduced-motion: reduce) {
-      .modal.fade .modal-dialog {
-        -webkit-transition: none;
-        -o-transition: none;
-        transition: none; } }
-  .modal.show .modal-dialog {
-    -webkit-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    transform: translate(0, 0); }
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+}
+
+.modal.show .modal-dialog {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
 
 .modal-dialog-centered {
   display: -webkit-box;
@@ -4448,7 +4455,8 @@ button.close {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  min-height: calc(100% - (0.5rem * 2)); }
+  min-height: calc(100% - (0.5rem * 2));
+}
 
 .modal-content {
   position: relative;
@@ -4474,12 +4482,16 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: #000; }
-  .modal-backdrop.fade {
-    opacity: 0; }
-  .modal-backdrop.show {
-    opacity: 0.5; }
+  background-color: #000;
+}
 
+.modal-backdrop.fade {
+  opacity: 0;
+}
+
+.modal-backdrop.show {
+  opacity: 0.5;
+}
 .modal-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8664,30 +8676,78 @@ textarea.form-control {
   font-size: 16px; }
 
 .block-16 figure {
-  position: relative; }
-  .block-16 figure .play-button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-size: 40px;
-    width: 90px;
-    height: 90px;
-    background: #fff;
-    display: block;
-    border-radius: 50%;
-    opacity: .7; }
-    .block-16 figure .play-button:hover {
-      opacity: 1; }
-    .block-16 figure .play-button > span {
-      position: absolute;
-      left: 55%;
-      top: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%); }
+  position: relative;
+}
+
+.block-16 figure .play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  width: 90px;
+  height: 90px;
+  background: #fff;
+  display: block;
+  border-radius: 50%;
+  opacity: .7;
+}
+
+.block-16 figure .play-button:hover {
+  opacity: 1;
+}
+
+.block-16 figure .play-button>span {
+  position: absolute;
+  left: 55%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.block-16 .day {
+  background-color: #005555;
+  width: 110px;
+  height: 35px;
+  border-radius: 3px;
+  float: left;
+}
+
+.block-16 .day p {
+  color: white;
+  text-align: center;
+  line-height: 35px;
+  font-weight: bold;
+}
+
+.block-16 .spot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 85, 85, 0.07);
+  width: 705px;
+  height: 35px;
+  border-radius: 3px;
+  float: left;
+  padding: 15px;
+}
+
+.block-16 .spot p {
+  color: black;
+  text-align: left;
+  line-height: 8px;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+.block-16 .spot i {
+  display: flex;
+  justify-content: flex-end;
+}
+
 
 .block-18 .icon > span {
   font-size: 40px; }
@@ -9868,3 +9928,348 @@ font-size: 18px;
   .custom-pagination a:hover, .custom-pagination a.active {
     background: #00204a;
     color: #fff; }
+
+.findcamper {
+  display: flex;
+  flex-wrap: wrap;
+  letter-spacing: 1px;
+  line-height: 30px;
+  margin-top: 10px;
+  align-items: center;
+}
+
+.findcamper i {
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.findcamper-icon {
+  margin-right: 40px;
+  box-sizing: content-box;
+  width: 160px;
+}
+
+.findcamper-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.camp-icon {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.camp-icon i {
+  margin-right: 16px;
+}
+
+.camp-icon label {
+  display: block;
+  margin-bottom: 0px;
+  align-items: center;
+  box-sizing: content-box;
+  width: 64px;
+}
+
+.camp-icon p {
+  margin-bottom: 0px;
+  align-items: center;
+}
+
+.more {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  margin-bottom: 32px;
+  font-size: 14px;
+
+}
+.modalContent-filter {
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 4px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+  width: 500px;
+  height: auto;
+  background-color: white;
+  margin: 10% auto;
+}
+
+.modalContent-filter .btn-secondary {
+  width: 100px;
+  height: 35px;
+  background-color: #005555;
+  color: white;
+  border: none;
+  border-radius: 30px;
+}
+
+.modalContent {
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 4px;
+  padding: 40px;
+  width: 500px;
+  height: auto;
+  background-color: white;
+  margin: 10% auto;
+}
+
+.modalContent .btn-secondary {
+  width: 100px;
+  height: 35px;
+  background-color: #005555;
+  color: white;
+  border: none;
+  border-radius: 30px;
+}
+
+.notice {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: #F0F0F0;
+  clear: both;
+}
+
+.notice .list li {
+  font-size: 12px;
+}
+
+.modal-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 32px;
+}
+
+.modal-list input {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #9D9D9D;
+  width: 420px;
+  height: 45px;
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.col-md-6 {
+  overflow: hidden;
+}
+
+#preview-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-right: 16px;
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+#remove-image {
+  position: absolute;
+  top: 0;
+  right: 16px;
+  /* 與圖片的padding-right相同 */
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  /* border-top-right-radius: 4px; */
+  /* 與圖片的border-radius相同 */
+  cursor: pointer;
+}
+
+.error-message {
+  color: #B02626;
+  display: none;
+  font-size: smaller;
+  margin-bottom: 2px;
+  margin-left: 8px;
+}
+
+.remove-image-button {
+  position: absolute;
+  top: 0;
+  right: 16px;
+  /* 與圖片的padding-right相同 */
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  /* border-top-right-radius: 4px; */
+  /* 與圖片的border-radius相同 */
+  cursor: pointer;
+}
+
+.modal-list input[type="checkbox"] {
+  background-color: #ffffff;
+  border-style: solid 1px;
+  border-color: #7d7d7d;
+  width: 12px;
+  height: 12px;
+  border-radius: 2px;
+  margin-bottom: 0px;
+  margin-right: 8px;
+}
+
+.modal-list input[type="file"] {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #7d7d7d;
+  width: 100%;
+  height: 150px;
+  border-radius: 4px;
+  padding: 20px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-weight: 300;
+  font-size: 12px;
+
+}
+
+.modal-list select {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #7d7d7d;
+  width: 100%;
+  height: 45px;
+  border-radius: 35px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.supply {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.supply p {
+  box-sizing: content-box;
+  margin-bottom: 0px;
+  width: 60px;
+}
+
+.modal-list textarea {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #7d7d7d;
+  width: 420px;
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+
+.modal-list textarea.lg {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #7d7d7d;
+  width: 733px;
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+
+.col-md-4 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.btn-icon {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.file-upload {
+  display: block;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+  border: 2px dashed #ccc;
+  padding: 20px;
+  cursor: pointer;
+  margin: 20px auto;
+  max-width: 500px;
+
+}
+
+
+.file-upload .file-upload-preview {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.file-upload .file-upload-preview img {
+  max-width: 100%;
+  max-height: 200px;
+  margin-top: 10px;
+}
+
+.col-md-6 input {
+  background-color: #F0F0F0;
+  border-style: none;
+  color: #7d7d7d;
+  width: 100%;
+  height: 45px;
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+}
+.box-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.box-side h6 {
+  font-size: 14px;
+  margin-bottom: 0px;
+}
+
+.box-side i {
+  margin-right: 5px;
+}
+
+.box-side p {
+  font-size: smaller;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.box-side .btn-side {
+  display: block;
+  width: 100%;
+  height: 36px;
+  background-color: #525f58;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
