--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -3648,6 +3648,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem; }
+
   .card > hr {
     margin-right: 0;
     margin-left: 0; }
@@ -3684,28 +3685,38 @@ input[type="button"].btn-block {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
-  .card-header:first-child {
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
-  .card-header + .list-group .list-group-item:first-child {
-    border-top: 0; }
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.card-header:first-child {
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+}
+
+.card-header+.list-group .list-group-item:first-child {
+  border-top: 0;
+}
 
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125); }
-  .card-footer:last-child {
-    border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px); }
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.card-footer:last-child {
+  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
+}
 
 .card-header-tabs {
   margin-right: -0.625rem;
   margin-bottom: -0.75rem;
   margin-left: -0.625rem;
-  border-bottom: 0; }
+  border-bottom: 0;
+}
 
 .card-header-pills {
   margin-right: -0.625rem;
-  margin-left: -0.625rem; }
+  margin-left: -0.625rem;
+}
 
 .card-img-overlay {
   position: absolute;
@@ -3744,6 +3755,8 @@ input[type="button"].btn-block {
   flex-direction: column; }
   .card-deck .card {
     margin-bottom: 15px; }
+
+
   @media (min-width: 576px) {
     .card-deck {
       -webkit-box-orient: horizontal;
@@ -3767,8 +3780,6 @@ input[type="button"].btn-block {
         margin-bottom: 0;
         margin-left: 15px; } }
 
-
-
 .card-group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3779,58 +3790,69 @@ input[type="button"].btn-block {
   flex-direction: column; }
   .card-group > .card {
     margin-bottom: 15px; }
-  @media (min-width: 576px) {
-    .card-group {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-      flex-flow: row wrap; }
-      .card-group > .card {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 0%;
-        flex: 1 0 0%;
-        margin-bottom: 0; }
-        .card-group > .card + .card {
-          margin-left: 0;
-          border-left: 0; }
-        .card-group > .card:first-child {
-          border-top-right-radius: 0;
-          border-bottom-right-radius: 0; }
-          .card-group > .card:first-child .card-img-top,
-          .card-group > .card:first-child .card-header {
-            border-top-right-radius: 0; }
-          .card-group > .card:first-child .card-img-bottom,
-          .card-group > .card:first-child .card-footer {
-            border-bottom-right-radius: 0; }
-        .card-group > .card:last-child {
-          border-top-left-radius: 0;
-          border-bottom-left-radius: 0; }
-          .card-group > .card:last-child .card-img-top,
-          .card-group > .card:last-child .card-header {
-            border-top-left-radius: 0; }
-          .card-group > .card:last-child .card-img-bottom,
-          .card-group > .card:last-child .card-footer {
-            border-bottom-left-radius: 0; }
-        .card-group > .card:only-child {
-          border-radius: 0.25rem; }
-          .card-group > .card:only-child .card-img-top,
-          .card-group > .card:only-child .card-header {
-            border-top-left-radius: 0.25rem;
-            border-top-right-radius: 0.25rem; }
-          .card-group > .card:only-child .card-img-bottom,
-          .card-group > .card:only-child .card-footer {
-            border-bottom-right-radius: 0.25rem;
-            border-bottom-left-radius: 0.25rem; }
-        .card-group > .card:not(:first-child):not(:last-child):not(:only-child) {
-          border-radius: 0; }
-          .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
-          .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-img-bottom,
-          .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-header,
-          .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
-            border-radius: 0; } }
 
-.card-columns .card {
-  margin-bottom: 0.75rem; }
+
+@media (min-width: 576px) {
+  .card-group {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+  }
+
+  .card-group>.card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    margin-bottom: 0;
+  }
+
+  .card-group>.card+.card {
+    margin-left: 0;
+    border-left: 0;
+  }
+
+  .card-group>.card:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .card-group>.card:first-child .card-img-top,
+  .card-group>.card:first-child .card-header {
+    border-top-right-radius: 0;
+  }
+
+  .card-group>.card:first-child .card-img-bottom,
+  .card-group>.card:first-child .card-footer {
+    border-bottom-right-radius: 0;
+  }
+
+  .card-group>.card:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .card-group>.card:only-child {
+    border-radius: 0.25rem;
+  }
+
+  .card-group>.card:only-child .card-img-bottom,
+  .card-group>.card:only-child .card-footer {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) {
+    border-radius: 0;
+  }
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-bottom,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-header,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
+    border-radius: 0;
+  }
+}
 
 @media (min-width: 576px) {
   .card-columns {
@@ -4537,6 +4559,27 @@ button.close {
     margin-left: .25rem; }
   .modal-footer > :not(:last-child) {
     margin-right: .25rem; }
+
+
+.modal-footer .btn-secondary{
+width: 90px; 
+height: 35px; 
+background-color: #005555;
+color: white;
+border:none; 
+border-radius: 30px;
+}
+.modal-footer .btn-secondary:hover {
+width: 90px; 
+height: 35px; 
+background-color: #d9d9d9;
+color: black;
+border:none; 
+border-radius: 30px;
+padding: 5px;
+margin-left: 15px;
+}
+
 
 .modal-scrollbar-measure {
   position: absolute;
@@ -9573,6 +9616,27 @@ dialog::backdrop {
   background-color: #005555;
 }
 
+.card-body-eq h4{
+  margin-top: 20px;
+  margin-bottom: 1.3rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #005555;
+  font-size: 20px;
+  position: relative;
+  padding-bottom: 4px;
+  display: inline-block;
+}
+.card-body-eq h4::after{
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: 0;
+  background-color: #005555;
+}
+
 .card-body-eq {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
@@ -9586,6 +9650,7 @@ dialog::backdrop {
 .card-subtitle-eq {
   margin-top: -0.25rem;
   margin-bottom: 0; }
+
 .card-text-eq{
   margin-left: 6px; 
   font-size: 15px; 
@@ -9668,6 +9733,15 @@ dialog::backdrop {
   color: #005555;
   margin-right: 12px;
   margin-left: 64px;
+}
+.detail h5 {
+  color: #000;
+  align-items: center;
+  margin-bottom: 0px;
+  font-weight: 700;
+  font-size: 20px;
+  box-sizing: content-box;
+  width: 200px;
 }
 .detail h5 {
   color: #000;
@@ -9999,14 +10073,14 @@ font-size: 18px;
   margin: 10% auto;
 }
 
-.modalContent-filter .btn-secondary {
+/*.modalContent-filter .btn-secondary {
   width: 100px;
   height: 35px;
   background-color: #005555;
   color: white;
   border: none;
   border-radius: 30px;
-}
+}*/
 
 .modalContent {
   border: none;
@@ -10144,7 +10218,7 @@ font-size: 18px;
   background-color: #F0F0F0;
   border-style: none;
   color: #7d7d7d;
-  width: 100%;
+  width: 420px;;
   height: 45px;
   border-radius: 35px;
   padding-left: 15px;
@@ -10272,4 +10346,45 @@ font-size: 18px;
   color: white;
   border: none;
   border-radius: 5px;
+}
+
+.card-camp {
+  width: 1200px;
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: #dfe0e1;
+  margin-top: 32px;
+  display: flex;
+  font-size: 12px;
+}
+
+.card-camp-body {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+}
+
+.card-camp p {
+  font-size: 16px;
+  display: flex;
+}
+
+.card-head{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 48px;
+  margin-top: -20px;
+  margin-bottom: 0px;
+}
+.card-head img{
+  width:60px;
+  margin-top: 0px; 
+  border: solid 3px #Ffffff;
+  border-radius: 50%;
+}
+.card-head p{
+  margin-top: 32px; 
+  margin-left: 8px;
 }
