--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -4169,7 +4169,8 @@ textarea.form-control-lg {
     .card-img,
     .card-img-top,
     .card-img-bottom {
-      width: 100%; }
+      width: 100%;
+      height: 300px; }
     
     .card-img,
     .card-img-top {
@@ -4183,42 +4184,6 @@ textarea.form-control-lg {
     
     .card-group > .card {
       margin-bottom: 0.75rem; }
-    
-    @media (min-width: 576px) {
-      .card-group {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-        flex-flow: row wrap; }
-        .card-group > .card {
-          -webkit-box-flex: 1;
-          -ms-flex: 1 0 0%;
-          flex: 1 0 0%;
-          margin-bottom: 0; }
-          .card-group > .card + .card {
-            margin-left: 0;
-            border-left: 0; }
-          .card-group > .card:not(:last-child) {
-            border-top-right-radius: 0;
-            border-bottom-right-radius: 0; }
-            .card-group > .card:not(:last-child) .card-img-top,
-            .card-group > .card:not(:last-child) .card-header {
-              border-top-right-radius: 0; }
-            .card-group > .card:not(:last-child) .card-img-bottom,
-            .card-group > .card:not(:last-child) .card-footer {
-              border-bottom-right-radius: 0; }
-          .card-group > .card:not(:first-child) {
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0; }
-            .card-group > .card:not(:first-child) .card-img-top,
-            .card-group > .card:not(:first-child) .card-header {
-              border-top-left-radius: 0; }
-            .card-group > .card:not(:first-child) .card-img-bottom,
-            .card-group > .card:not(:first-child) .card-footer {
-              border-bottom-left-radius: 0; } }
 
 .card-body {
   -webkit-box-flex: 1;
@@ -4298,19 +4263,29 @@ margin-bottom: 0px;
   margin-left: 1rem; }
 
 .card-header {
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
-  .card-header:first-child {
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.card-header:first-child {
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+}
+
+.card-header+.list-group .list-group-item:first-child {
+  border-top: 0;
+}
 
 .card-footer {
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
-  border-top: 1px solid rgba(0, 0, 0, 0.125); }
-  .card-footer:last-child {
-    border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px); }
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.card-footer:last-child {
+  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
+}
 
 .card-header-tabs {
   margin-right: -0.5rem;
@@ -4337,40 +4312,83 @@ margin-bottom: 0px;
 
 @media (min-width: 576px) {
   .card-group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-flow: row wrap;
-    flex-flow: row wrap; }
-    .card-group > .card {
-      -webkit-box-flex: 1;
-      -ms-flex: 1 0 0%;
-      flex: 1 0 0%;
-      margin-bottom: 0; }
-      .card-group > .card + .card {
-        margin-left: 0;
-        border-left: 0; }
-      .card-group > .card:not(:last-child) {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0; }
-        .card-group > .card:not(:last-child) .card-img-top,
-        .card-group > .card:not(:last-child) .card-header {
-          border-top-right-radius: 0; }
-        .card-group > .card:not(:last-child) .card-img-bottom,
-        .card-group > .card:not(:last-child) .card-footer {
-          border-bottom-right-radius: 0; }
-      .card-group > .card:not(:first-child) {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0; }
-        .card-group > .card:not(:first-child) .card-img-top,
-        .card-group > .card:not(:first-child) .card-header {
-          border-top-left-radius: 0; }
-        .card-group > .card:not(:first-child) .card-img-bottom,
-        .card-group > .card:not(:first-child) .card-footer {
-          border-bottom-left-radius: 0; } }
-.card-camp{
+    flex-flow: row wrap;
+  }
+
+  .card-group>.card {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    margin-bottom: 0;
+  }
+
+  .card-group>.card+.card {
+    margin-left: 0;
+    border-left: 0;
+  }
+
+  .card-group>.card:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .card-group>.card:first-child .card-img-top,
+  .card-group>.card:first-child .card-header {
+    border-top-right-radius: 0;
+  }
+
+  .card-group>.card:first-child .card-img-bottom,
+  .card-group>.card:first-child .card-footer {
+    border-bottom-right-radius: 0;
+  }
+
+  .card-group>.card:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  .card-group>.card:last-child .card-img-top,
+  .card-group>.card:last-child .card-header {
+    border-top-left-radius: 0;
+  }
+
+  .card-group>.card:last-child .card-img-bottom,
+  .card-group>.card:last-child .card-footer {
+    border-bottom-left-radius: 0;
+  }
+
+  .card-group>.card:only-child {
+    border-radius: 0.25rem;
+  }
+
+  .card-group>.card:only-child .card-img-top,
+  .card-group>.card:only-child .card-header {
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+  }
+
+  .card-group>.card:only-child .card-img-bottom,
+  .card-group>.card:only-child .card-footer {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) {
+    border-radius: 0;
+  }
+
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-img-bottom,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-header,
+  .card-group>.card:not(:first-child):not(:last-child):not(:only-child) .card-footer {
+    border-radius: 0;
+  }
+}
+
+.card-camp {
   width: 1200px;
   border-radius: 4px;
   border: 1px solid;
@@ -4379,16 +4397,37 @@ margin-bottom: 0px;
   display: flex;
   font-size: 12px;
 }
+
 .card-camp-body {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1rem 1rem; }
+  padding: 1rem 1rem;
+}
 
-  .card-camp p{
-    font-size: 16px;
-    display: flex;
-  }
+.card-camp p {
+  font-size: 16px;
+  display: flex;
+}
+
+.card-head{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 48px;
+  margin-top: -20px;
+  margin-bottom: 0px;
+}
+.card-head img{
+  width:60px;
+  margin-top: 0px; 
+  border: solid 3px #Ffffff;
+  border-radius: 50%;
+}
+.card-head p{
+  margin-top: 32px; 
+  margin-left: 8px;
+}
 
 .accordion-button {
   position: relative;
@@ -5257,6 +5296,26 @@ margin-bottom: 0px;
   border-bottom-left-radius: calc(0.3rem - 1px); }
   .modal-footer > * {
     margin: 0.25rem; }
+
+
+.modal-footer .btn-secondary{
+width: 90px; 
+height: 35px; 
+background-color: #005555;
+color: white;
+border:none; 
+border-radius: 30px;
+}
+.modal-footer .btn-secondary:hover {
+width: 90px; 
+height: 35px; 
+background-color: #d9d9d9;
+color: black;
+border:none; 
+border-radius: 30px;
+padding: 5px;
+margin-left: 15px;
+}
 
 @media (min-width: 576px) {
   .modal-dialog {
@@ -9895,15 +9954,15 @@ a {
   text-decoration: none; }
 
 .form-control {
+  height: 41px !important;
+  background: #fff !important;
+  color: #000000 !important;
   font-size: 14px;
-  height: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: 40px; }
-  .form-control:hover, .form-control:active, .form-control:focus {
-    outline: none;
-    -webkit-box-shadow: none;
-    box-shadow: none; }
+  border-radius: 35px;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important; }
+  .form-control:focus, .form-control:active {
+    border-color: #000000; }
 
 textarea {
   height: auto !important; }
@@ -11604,24 +11663,6 @@ border: 0;
 -webkit-appearance: none;
 }
 
-.modal-footer .btn-secondary{
-width: 90px; 
-height: 35px; 
-background-color: #005555;
-color: white;
-border:none; 
-border-radius: 30px;
-}
-.modal-footer .btn-secondary:hover {
-width: 90px; 
-height: 35px; 
-background-color: #d9d9d9;
-color: black;
-border:none; 
-border-radius: 30px;
-padding: 5px;
-margin-left: 15px;
-}
 .modal-index{
   display: flex; 
   align-items: center;
@@ -12029,14 +12070,15 @@ select.warning{
   margin: 10% auto;
 }
 
-.modalContent-filter .btn-secondary {
+/*.modalContent-filter .btn-secondary {
   width: 100px;
   height: 35px;
   background-color: #005555;
   color: white;
   border: none;
   border-radius: 30px;
-}
+}*/
+
 
 .button-filter {
   border-radius: 35px !important;
@@ -12397,7 +12439,7 @@ font-size: 14px;
   background-color: #F0F0F0;
   border-style: none;
   color: #7d7d7d;
-  width: 100%;
+  width: 420px;
   height: 45px;
   border-radius: 35px;
   padding-left: 15px;
@@ -12525,4 +12567,15 @@ font-size: 14px;
   color: white;
   border: none;
   border-radius: 5px;
+}
+
+.card-body-eq {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+  margin-top: 17px; }
+
+.card-eq {
+  width: 30%; /* 设置卡片的宽度 */
 }
