--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -508,8 +508,11 @@ progress {
     content: "\2014\00A0"; }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto; }
+  /*max-width: 100%;
+  height: auto;*/
+  width: 412px;
+  height: 412px;
+ }
 
 .img-fluid .icon-heart:before{
   position: absolute;
